language/move-lang/tests/move_check/typing/exp_list_resource_drop.exp
error: 

   ┌── tests/move_check/typing/exp_list_resource_drop.move:7:9 ───
   │
 7 │         (0, S{}, R<u64> {});
   │         ^^^^^^^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
   ·
 7 │         (0, S{}, R<u64> {});
   │                  --------- The type: '0x8675309::M::R<u64>'
   ·
 2 │     resource struct R<T> {}
   │     -------- Is found to be a non-copyable type here
   │

error: 

   ┌── tests/move_check/typing/exp_list_resource_drop.move:8:9 ───
   │
 8 │         (0, S{}, Box<R<u64>> {});
   │         ^^^^^^^^^^^^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
   ·
 8 │         (0, S{}, Box<R<u64>> {});
   │                  -------------- The type: '0x8675309::M::Box<0x8675309::M::R<u64>>'
   ·
 2 │     resource struct R<T> {}
   │     -------- Is found to be a non-copyable type here
   │

error: 

   ┌── tests/move_check/typing/exp_list_resource_drop.move:9:9 ───
   │
 9 │         (0, S{}, Box {});
   │         ^^^^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
   ·
 9 │         (0, S{}, Box {});
   │                  ------ The type: '0x8675309::M::Box<_>'
   ·
 4 │     struct Box<T> {}
   │                - Is found to be a non-copyable type here
   │

error: 

   ┌── tests/move_check/typing/exp_list_resource_drop.move:9:18 ───
   │
 9 │         (0, S{}, Box {});
   │                  ^^^^^^ Could not infer this type. Try adding an annotation
   │

